--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -36,7 +36,8 @@
 \urlstyle{same}  % don't use monospace font for urls
  
 \usepackage{natbib}
-\bibliographystyle{References/my_abbrvnat}
+%\bibliographystyle{References/my_abbrvnat}
+\bibliographystyle{my_abbrvnat}
 \setcitestyle{authoryear,open={(},close={)}}
 
 \usepackage{graphicx,grffile}
@@ -92,7 +93,7 @@
 }
 %%% END HELPER CODE
 
-\myexternaldocument{Paper/Supplements_Review}
+%\myexternaldocument{Paper/Supplements_Review}
 
 \usepackage{setspace}
 \onehalfspacing
@@ -934,8 +935,8 @@ For example, if we assume $N$, $A(t)$ and $\alpha$ are all constant,  and migrat
 \end{align}
 \hypertarget{refs}{}
 
-\bibliography{References/MyLibraryATE}
-
+%\bibliography{References/MyLibraryATE}
+\bibliography{MyLibraryATE}
 
 %\pagebreak
 %\setcounter{figure}{0} %\renewcommand{\figurename}{Fig. S}
