--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -77,20 +77,20 @@
 \def\footnote{\protect\rmarkdownfootnote}
 
 %%% HELPER CODE FOR DEALING WITH EXTERNAL REFERENCES
-\usepackage{xr}
-\makeatletter
-\newcommand*{\addFileDependency}[1]{
-  \typeout{(#1)}
-  \@addtofilelist{#1}
-  \IfFileExists{#1}{}{\typeout{No file #1.}}
-}
-\makeatother
+%\usepackage{xr}
+%\makeatletter
+%\newcommand*{\addFileDependency}[1]{
+%  \typeout{(#1)}
+%  \@addtofilelist{#1}
+%  \IfFileExists{#1}{}{\typeout{No file #1.}}
+%}
+%\makeatother
 
-\newcommand*{\myexternaldocument}[1]{
-    \externaldocument{#1}
-    \addFileDependency{#1.tex}
-    \addFileDependency{#1.aux}
-}
+%\newcommand*{\myexternaldocument}[1]{
+%    \externaldocument{#1}
+%    \addFileDependency{#1.tex}
+%    \addFileDependency{#1.aux}
+%}
 %%% END HELPER CODE
 
 %\myexternaldocument{Paper/Supplements_Review}
