Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -25,7 +25,7 @@
 \usepackage[margin=1in]{geometry}
 
 \usepackage{hyperref}
-\newcommand*\referencetitle[1]{\def\@currentlabelname{#1}}
+%\newcommand*\referencetitle[1]{\def\@currentlabelname{#1}}
 
 \hypersetup{unicode=true,
             pdftitle={Title: An extended admixture pulse model reveals the limitations to Human-Neandertal introgression dating},
@@ -36,8 +36,8 @@
 \urlstyle{same}  % don't use monospace font for urls
  
 \usepackage{natbib}
-\bibliographystyle{References/my_abbrvnat}
-%\bibliographystyle{my_abbrvnat}
+%\bibliographystyle{References/my_abbrvnat}
+\bibliographystyle{my_abbrvnatI can }
 \setcitestyle{authoryear,open={(},close={)}}
 
 \usepackage{graphicx,grffile}
@@ -935,8 +935,8 @@ For example, if we assume $N$, $A(t)$ and $\alpha$ are all constant,  and migrat
 \end{align}
 \hypertarget{refs}{}
 
-\bibliography{References/MyLibraryATE}
-%\bibliography{MyLibraryATE}
+%\bibliography{References/MyLibraryATE}
+\bibliography{MyLibraryATE2}
 
 %\pagebreak
 %\setcounter{figure}{0} %\renewcommand{\figurename}{Fig. S}
