Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -500,8 +500,8 @@ The effect of simulating an extended-pulse gene flow only results in a slight bi
 
 \begin{figure}
 \centering
-%\includegraphics[width=12cm,height=16cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult_3_GLM_SP_and_EP_bias-1.pdf}
-\includegraphics[width=12cm,height=16cm,keepaspectratio]{Fig_4_MBE-21-0164_R1_Peter_Iasi.pdf}
+\includegraphics[width=12cm,height=16cm,keepaspectratio]{ATE_Revisions_files/figure-latex/figResult_3_GLM_SP_and_EP_bias-1.pdf}
+%\includegraphics[width=12cm,height=16cm,keepaspectratio]{Fig_4_MBE-21-0164_R1_Peter_Iasi.pdf}
 \caption{\label{fig:figGLM} GLM effect sizes for the bias between simulated and estimated mean admixture time  and 95\% C.I. for the parameters between the simple and extended pulse model: gene flow (simple/extended), recombination rate (constant/varying), demography (simple/complex), minimal genetic distance (0.02/0.05 cM), SNPs used for ALD calculation (100 \% / 5 \%) and ascertainment scheme (LES/HES). Estimates are calculated across all possible combinations of parameters. Dotted horizontal line indicates unbiased admixture estimates.}
 \end{figure}
 
@@ -936,7 +936,7 @@ For example, if we assume $N$, $A(t)$ and $\alpha$ are all constant,  and migrat
 \hypertarget{refs}{}
 
 %\bibliography{References/MyLibraryATE}
-\bibliography{MyLibraryATE2}
+\bibliography{MyLibraryATE}
 
 %\pagebreak
 %\setcounter{figure}{0} %\renewcommand{\figurename}{Fig. S}
