Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -462,13 +462,13 @@ The resulting log-likelihood ratios are given in Figure \ref{fig:fig1_1}. In gen
 
 
 \subsection{Population Genetic Model Comparisons}\label{Model comparison}
-In the previous section, we have shown that we can distinguish long pulses from instantenous gene flow under idealized conditions. As a more realistic scenario, we perform population genetic simulations using  \texttt{msprime}  \citep{kelleher_efficient_2016}. Throughout, we simulate 3\% Neandertal admixture into non-Africans using a demographic model of archaic introgression (Supplementary Figure \ref{fig:figS1}B) with a mean admixture time of 1,500 generations ago and varying durations.  We simulate 20 chromosomes of length 150MB, using either a constant recombination map, or using the HapMap recombination map \citep{HapMapConsortium_second_2007}. This results in $\sim10,000$ introgressed segments. We then perform inference either using the simulated segments, segments inferred from the data \citep{skov_detecting_2018}, or ALD calculated using ALDER \citep{loh_inferring_2013}. We further vary recombination rate settings as i) inference and simulation under constant recombination rate (Constant/Constant), ii) simulation using the HapMap genetic map \citep{HapMapConsortium_second_2007}, and inference using no correction (HapMap/Constant), iii) simulation using HapMap, correction using a different map  (HapMap/AAMap) \citep{hinch_landscape_2011}, iv) and inference using the same map used for the simulations (HapMap/HapMap). 
+In the previous section, we have shown that we can distinguish long pulses from instantenous gene flow under idealized conditions. As a more realistic scenario, we perform population genetic simulations using  \texttt{msprime}  \citep{kelleher_efficient_2016}. Throughout, we simulate 3\% Neandertal admixture into non-Africans using a demographic model of archaic introgression (Supplementary Figure 1B) with a mean admixture time of 1,500 generations ago and varying durations.  We simulate 20 chromosomes of length 150MB, using either a constant recombination map, or using the HapMap recombination map \citep{HapMapConsortium_second_2007}. This results in $\sim10,000$ introgressed segments. We then perform inference either using the simulated segments, segments inferred from the data \citep{skov_detecting_2018}, or ALD calculated using ALDER \citep{loh_inferring_2013}. We further vary recombination rate settings as i) inference and simulation under constant recombination rate (Constant/Constant), ii) simulation using the HapMap genetic map \citep{HapMapConsortium_second_2007}, and inference using no correction (HapMap/Constant), iii) simulation using HapMap, correction using a different map  (HapMap/AAMap) \citep{hinch_landscape_2011}, iv) and inference using the same map used for the simulations (HapMap/HapMap). 
 
 Using these simulations, we perform  model comparisons (Figure \ref{fig:figResult2}A). For segments, we again use the likelihood-ratio and find that the results for the simulated segments closely match the simulations under the model (Figure \ref{fig:fig1_1}), showing that our model is a good approximation in the parameter range of interest. In contrast, we find that for inferred segments, results greatly depend on the recombination rate used: For a constant recombination rate, results are similar, but for the HapMap-recombination map, we do not have any power to distinguish these scenarios. As we fit ALD using non-linear least squares, no formal model-comparison framework exists. Qualitatively, we plot the normalized residual sum-of squares (RSS) and find that they increase with $t_d$ for both recombination scenarios, suggesting that the difference between the two models increase. 
 
 Next, we evaluate parameter inference. In Figure \ref{fig:figResult2}B, we present estimates of the mean admixture times, admixture duration and the fitted segment and ALD distributions, respectively.  We find that the mean admixture times are reasonably accurately estimated in most scenarios, the exception being the inferred segments when using the variable (HapMap) recombination map. The admixture duration estimates are  often less accurate, and in most cases has very large variation between simulations.
  
-We detect a slight, but consistent underestimate of the mean admixture times, which increases with $t_d$. For the segments, this underestimate is likely due to the slight downward bias caused by recombination and coalescence between admixed segments \citep[][see also Appendix \nameref{Appendix_3}]{liang_lengths_2014}. For ALD, this bias is much less severe, particularly for inference under the extended pulse model. For scenarios where the recombination map is misspecified,  $t_m$ is estimated to be only around half of its true value (Supplementary Figure \ref{fig:figResult2_sup}). However, we find that in some cases, the extended pulse model provides a better estimate of $t_m$ by estimating the pulses to be extremely long.
+We detect a slight, but consistent underestimate of the mean admixture times, which increases with $t_d$. For the segments, this underestimate is likely due to the slight downward bias caused by recombination and coalescence between admixed segments \citep[][see also Appendix \nameref{Appendix_3}]{liang_lengths_2014}. For ALD, this bias is much less severe, particularly for inference under the extended pulse model. For scenarios where the recombination map is misspecified,  $t_m$ is estimated to be only around half of its true value (Supplementary Figure 2). However, we find that in some cases, the extended pulse model provides a better estimate of $t_m$ by estimating the pulses to be extremely long.
 
 In Figure \ref{fig:figResult2}C we show examples of the estimated segment length and ALD distributions compared to the simulated data. For these log-plots, the slope of the curve corresponds to the estimate of $t_m$, and the deviation from linearity reflects the duration of gene flow. In all cases, we find that the expected decay is very close to linear, matching our finding that power to differentiate these old events is limited. We find that particularly when using a constant recombination map, all three summaries give a very close fit, and the segment length and ALD-decay distribution  closely follow their expectations, which is consistent with the generally  good parameter estimates under these conditions. In the case of a variable recombination map, we find that particularly inferred fragments perform poorly, which is reflected by a substantial downward bias of $t_m$ and $t_d$.
 
@@ -489,13 +489,13 @@ In Figure \ref{fig:figResult2}C we show examples of the estimated segment length
 
 As we find that ALD performs as good or better than inferred segments (Figure \ref{fig:figResult2}), we focus on ALD for the remainder of this paper. Our next goal is to more carefully evaluate the relative importance of common assumptions made in the inference of admixture times, under both the simple and extended pulse model in the ALD framework on the bias and accuracy of estimates of $t_m$ under either model.
 
-In particular, we use a Bayesian Generalized Linear Model (GLM) framework to contrast the effect of extended gene flow on admixture time inference with i) the effects of a simple/complex demographic history (Supplementary Figure \ref{fig:figS1}), ii) recombination map variation , iii)  the ALD ascertainment scheme,  iv) ,$d_0$, the minimum genetic distance between variants and v) the number of makers used to estimate the ALD curve (see Methods for details). For each modelling parameter and gene flow model, we use a simple model as the base case, and we study the impact of a more ``realistic'' alternative model.
+In particular, we use a Bayesian Generalized Linear Model (GLM) framework to contrast the effect of extended gene flow on admixture time inference with i) the effects of a simple/complex demographic history (Supplementary Figure 1), ii) recombination map variation , iii)  the ALD ascertainment scheme,  iv) ,$d_0$, the minimum genetic distance between variants and v) the number of makers used to estimate the ALD curve (see Methods for details). For each modelling parameter and gene flow model, we use a simple model as the base case, and we study the impact of a more ``realistic'' alternative model.
 
-In Figure \ref{fig:figGLM}, we present the estimated effect sizes for these six variables and four key interaction terms. To model bias, we fit a model to the standardized difference between the true and estimated mean admixture time, and to model accuracy (Methods, Supplementary Table \ref{tab:table_Supplements_ests_bias}, Supplementary Figure \ref{fig:figGLM_deviation}, Supplementary Table \ref{tab:table_Supplements_ests_deviation}). These effect sizes are estimated using simulations under all possible parameter combinations on a scenario with admixture happening 1,500 generations ago. (Supplementary Figures \ref{fig:figSGLM_data_SP} and \ref{fig:figSGLM_data_EP}).
+In Figure \ref{fig:figGLM}, we present the estimated effect sizes for these six variables and four key interaction terms. To model bias, we fit a model to the standardized difference between the true and estimated mean admixture time, and to model accuracy (Methods, Supplementary Table 1, Supplementary Figure 3, Supplementary Table 2). These effect sizes are estimated using simulations under all possible parameter combinations on a scenario with admixture happening 1,500 generations ago. (Supplementary Figures 4 and 5).
 
-As a baseline, for comparison, we define a standard model using a simple demography (Supplementary Figure \ref{fig:figS1}A) and a constant recombination rate.  This baseline model results in unbiased estimates of $t_m$ under the single pulse model with low deviation  of 0.08 (0.02 -- 0.14 $C.I._{95\%}$), and a slight upward bias 0.21 (0.15 -- 0.28) for the extended pulse model.
+As a baseline, for comparison, we define a standard model using a simple demography (Supplementary Figure 1A) and a constant recombination rate.  This baseline model results in unbiased estimates of $t_m$ under the single pulse model with low deviation  of 0.08 (0.02 -- 0.14 $C.I._{95\%}$), and a slight upward bias 0.21 (0.15 -- 0.28) for the extended pulse model.
 
-The effect of simulating an extended-pulse gene flow only results in a slight bias of -0.17; -0.21 -- -0.13) for the simple pulse and no bias for inference under the extended pulse model (-0.11; -0.15 -- 0.07). In contrast, uncertainty in the genetic map causes by far the largest downward bias (Simple pulse: -1.22, -1.29 -- -1.16; Extended Pulse: -0.74, -0.80 -- -0.67) with high deviation in the estimates (Supplementary Figure \ref{fig:figGLM_deviation}). The more complex demography results in an underestimate of $t_m$, presumably because of increased genetic drift, for both the simple pulse ( -0.27, -0.33 -- 0.22 and extended pulse models (-0.43, -0.49 -- -0.38). The remaining parameters largely only have very minor effects, the biggest of which is changing the minimum cutoff from 0.05cM to to 0.02 cM. 
+The effect of simulating an extended-pulse gene flow only results in a slight bias of -0.17; -0.21 -- -0.13) for the simple pulse and no bias for inference under the extended pulse model (-0.11; -0.15 -- 0.07). In contrast, uncertainty in the genetic map causes by far the largest downward bias (Simple pulse: -1.22, -1.29 -- -1.16; Extended Pulse: -0.74, -0.80 -- -0.67) with high deviation in the estimates (Supplementary Figure 3). The more complex demography results in an underestimate of $t_m$, presumably because of increased genetic drift, for both the simple pulse ( -0.27, -0.33 -- 0.22 and extended pulse models (-0.43, -0.49 -- -0.38). The remaining parameters largely only have very minor effects, the biggest of which is changing the minimum cutoff from 0.05cM to to 0.02 cM. 
 
 
 \begin{figure}
@@ -507,7 +507,7 @@ The effect of simulating an extended-pulse gene flow only results in a slight bi
 
 
 \subsection{Application to Neandertal Data}
-Our next aim is to apply our model on the case of Neandertal gene flow into Eurasians. We estimate the Neandertal admixture pulse from the 1000 genomes data \citep{the_1000_genomes_project_consortium_global_2015} and three high-coverage Neandertal genomes \citep{prufer_complete_2013, prufer_high-coverage_2017, mafessoni_high_coverage_2020} by fiting pulses with durations ranging from one generation up to 2,500 generations to the ALD decay curve (Figure \ref{fig:fig5}, Supplementary Table \ref{tab:table_Supplements_Application_to_Neandertal_data_Estimates}). Plotting these best-fit ALD curves shows the extremely slight difference predicted under these drastically different gene flow scenarios (Figure \ref{fig:fig5}A). The difference between scenarios becomes more apparent if we log-transform the y-axis (Figure \ref{fig:fig5}B), where we see that ongoing gene flow results in a heavier tail in the ALD distributions. However, these LD values are very close to zero, and are thus only very noisily estimated. 
+Our next aim is to apply our model on the case of Neandertal gene flow into Eurasians. We estimate the Neandertal admixture pulse from the 1000 genomes data \citep{the_1000_genomes_project_consortium_global_2015} and three high-coverage Neandertal genomes \citep{prufer_complete_2013, prufer_high-coverage_2017, mafessoni_high_coverage_2020} by fiting pulses with durations ranging from one generation up to 2,500 generations to the ALD decay curve (Figure \ref{fig:fig5}, Supplementary Table 3). Plotting these best-fit ALD curves shows the extremely slight difference predicted under these drastically different gene flow scenarios (Figure \ref{fig:fig5}A). The difference between scenarios becomes more apparent if we log-transform the y-axis (Figure \ref{fig:fig5}B), where we see that ongoing gene flow results in a heavier tail in the ALD distributions. However, these LD values are very close to zero, and are thus only very noisily estimated. 
 
 For short gene flows (less than 1,000 generations), our estimates for $t_m$ are very similar and identical to the simple pulse, at around 1,682 (1,526 -- 1,839 $C.I._{95\%}$) generations. Extremely high values of $t_d$ result in slightly higher values of $t_m$ with overlapping compatibility intervals; but all predict that Neandertals would have survived until ~30kya, for which the archaeological evidence is extremely sparse \citep{hublin_last_2017}.  From the residual sum-of-squares, the models perform equally well, with longer extended pulses of gene flow achieving marginally better fits (Supplementary Table \ref{tab:table_Supplements_Application_to_Neandertal_data_RSS}). Therefore, we find that all scenarios are compatible with the observed data, and that there is little power to differentiate these cases from genetics alone.  
 
@@ -523,12 +523,12 @@ For short gene flows (less than 1,000 generations), our estimates for $t_m$ are 
 
 Since Neandertal gene flow happened long in the past, much of the signal has been lost, and we have shown that in this scenario, power to distinguish different scenarios is low.
 
-However, we have also shown in Figure  \ref{fig:fig1_1} that inference is easier for more recent gene flow, a case that is relevant for many study systems. We investigate this in a series of simulations where the time between sampling and gene flow is smaller (Figure \ref{fig:Closer_sampling}). We use the simple demographic scenario with a constant-sized populations (Supplementary Figure \ref{fig:figS1}), and use ALD for inference using the optimised settings for the Neandertal case (ascertainment scheme = LES and  d0 = 0.05 cM).
+However, we have also shown in Figure  \ref{fig:fig1_1} that inference is easier for more recent gene flow, a case that is relevant for many study systems. We investigate this in a series of simulations where the time between sampling and gene flow is smaller (Figure \ref{fig:Closer_sampling}). We use the simple demographic scenario with a constant-sized populations (Supplementary Figure 1), and use ALD for inference using the optimised settings for the Neandertal case (ascertainment scheme = LES and  d0 = 0.05 cM).
 
-In Figure \ref{fig:Closer_sampling}A and B, we show the accuracy of estimating $t_d$ and $t_m$ for increasingly longer pulses, sampled 50 generations after gene flow ended. The corresponding comparison of model fit is depicted in Supplementary Figure \ref{fig:Closer_sampling_supplement}. For these cases, we find that inference of $t_m$ under the simple pulse model works well for the shortest pulses, but becomes increasingly downward biased as $t_d$ increases.  Estimates of $t_m$ are less biased for inference under the extended 
+In Figure \ref{fig:Closer_sampling}A and B, we show the accuracy of estimating $t_d$ and $t_m$ for increasingly longer pulses, sampled 50 generations after gene flow ended. The corresponding comparison of model fit is depicted in Supplementary Figure 6. For these cases, we find that inference of $t_m$ under the simple pulse model works well for the shortest pulses, but becomes increasingly downward biased as $t_d$ increases.  Estimates of $t_m$ are less biased for inference under the extended 
 pulse model, where we get accurate estimates particularly if recombination is constant. In the scenarios with a variable recombination rate, we find that for short, recent pulses, all corrections give good results, but for longer pulses, particularly assuming a constant recombination rate leads to a stronger bias. We also find that we are able to accurately infer the admixture duration, particularly if the recombination rate is constant.
 
-In \ref{fig:Closer_sampling} C and D, we keep the pulse duration constant at $t_d=800$, but move it successively further into the past. For the first two cases of $t_m=450$ and $t_m=500$ where the pulse is recent, we again obtain good parameter estimates, but performance deteriorates for $t_m \geq 600$, which also results in low power to distinguish the simple and extended pulse model (Supplementary Figure \ref{fig:Closer_sampling_supplement}, lower panel). 
+In \ref{fig:Closer_sampling} C and D, we keep the pulse duration constant at $t_d=800$, but move it successively further into the past. For the first two cases of $t_m=450$ and $t_m=500$ where the pulse is recent, we again obtain good parameter estimates, but performance deteriorates for $t_m \geq 600$, which also results in low power to distinguish the simple and extended pulse model (Supplementary Figure 6, lower panel). 
 
 \begin{figure}
 \centering
@@ -580,7 +580,7 @@ split time between modern humans and Neandertals is 10,000 generations
 and the split between Africans and non-Africans is 2,550
 generations. The migration rate from Neandertals into non-Africans
 was set to zero before the split from Africans, to ensure that there is no Neandertal
-ancestry in Africans.  For a more complex scenario of human population history, we followed the demographic model simulation setup of \cite{skov_detecting_2018}, but only simulated the Europeans. The split time of  non-Africans are kept the same as in the ALD simulations (2550 generations ago) (Supplementary Figure \ref{fig:figS1}B). 
+ancestry in Africans.  For a more complex scenario of human population history, we followed the demographic model simulation setup of \cite{skov_detecting_2018}, but only simulated the Europeans. The split time of  non-Africans are kept the same as in the ALD simulations (2550 generations ago) (Supplementary Figure 1B). 
 
 For each individual we simulate 20
 chromosomes with a length of 150 Mb each. The mutation rates are set to
@@ -674,7 +674,7 @@ For each of the possible sets of parameters, we simulate 100 replicates each and
 
 
 
-We assume a Normal likelihood because it is the maximum entropy distribution in our case. We obtained the posterior probability using a Hamiltonian Monte Carlo MCMC algorithm, as implemented in STAN \citep{carpenter_stan_2017} using an R interface \citep{stan_development_team_rstan_2018,mcelreath_statistical_2020}. The Markov chains converged to the target distribution (Rhat = 1) and efficiently sampled from the posterior (Supplementary Table \ref{tab:table_Supplements_ests_bias} and \ref{tab:table_Supplements_ests_deviation}).  
+We assume a Normal likelihood because it is the maximum entropy distribution in our case. We obtained the posterior probability using a Hamiltonian Monte Carlo MCMC algorithm, as implemented in STAN \citep{carpenter_stan_2017} using an R interface \citep{stan_development_team_rstan_2018,mcelreath_statistical_2020}. The Markov chains converged to the target distribution (Rhat = 1) and efficiently sampled from the posterior (Supplementary Table 1 and 2).  
 
 
 \subsection{Estimating Neandertal Admixture Time}\label{Estimating admixture time from real data}
