Update on Overleaf.

--- a/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
+++ b/Paper/Limits_to_the_Nea_Hum_admixture_dating_revised.tex
@@ -936,7 +936,8 @@ For example, if we assume $N$, $A(t)$ and $\alpha$ are all constant,  and migrat
 \hypertarget{refs}{}
 
 %\bibliography{References/MyLibraryATE}
-\bibliography{MyLibraryATE}
+%\bibliography{MyLibraryATE}
+\input{Limits_to_the_Nea_Hum_admixture_dating_revised.bbl}
 
 %\pagebreak
 %\setcounter{figure}{0} %\renewcommand{\figurename}{Fig. S}
